@@ -13,6 +13,7 @@
     + Circuits enhancements (Virtual Circuits);
     + Dropped support for 32bit systems;
     + PHP 5.4 is now required;
+    + Added comressed actions dropdown;
     + Rack module enhancements (#1325):
         + Dynamic rack sizes;
         + Top-down / Bottom-up racks;
